--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,96 @@ header {
     padding: 20px;
     background-color: white;
     border-bottom: 2px solid lightgray;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+}
+
+#search {
+    background-color: red;
+}
+
+#alerts {
+    background-color: green;
+}
+
+#account-details {
+    background-color: blue;
+}
+
+#upload-share {
+    background-color: yellow;
 }
 
 main {
     padding: 20px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+}
+
+#projects {
+
+}
+
+#project-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.project {
+    background-color: white;
+    border-left: 10px solid hsl(42deg 87% 55%);
+    border-radius: 5px;
+    padding: 40px 20px;
+    display: grid;
+    grid-template-rows: repeat(2, min-content) 1fr;
+    gap: 10px;
+}
+
+.project-share {
+    justify-self: flex-end;
+    align-self: flex-end;
+    padding: 10px;
+}
+
+.project-share a {
+    color: gray;
+}
+
+.project-share svg {
+    font-size: 32px;
+}
+
+
+#announcements-trending {
+    display: grid;
+    grid-template-rows: repeat(2, min-content);
+    gap: 15px;
+}
+
+#announcements {
+
+}
+
+#announcement-list {
+
+}
+
+.announcement {
+
+}
+
+#trending {
+
+}
+
+#trending-list {
+
+}
+
+.trend {
+    
 }
