--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ header {
 main {
     padding: 20px;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
     gap: 20px;
 }
 
@@ -100,7 +100,7 @@ main {
 
 #project-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-template-rows: repeat(2, 1fr);
     gap: 20px;
 }
@@ -113,6 +113,7 @@ main {
     display: grid;
     grid-template-rows: repeat(2, min-content) 1fr;
     gap: 10px;
+    box-shadow: 0 4px 2px -2px gray;
 }
 
 .project-share {
@@ -141,11 +142,21 @@ main {
 }
 
 #announcement-list {
-
+    background-color: white;
+    border-radius: 5px;
+    padding: 40px 20px;
+    display: grid;
+    gap: 10px;
+    box-shadow: 0 4px 2px -2px gray;
 }
 
 .announcement {
+    padding: 15px 0;
+    border-bottom: 1px solid grey;
+}
 
+.announcement:last-of-type {
+    border-bottom: none;
 }
 
 #trending {
@@ -153,9 +164,34 @@ main {
 }
 
 #trending-list {
-
+    background-color: white;
+    border-radius: 5px;
+    padding: 40px 20px;
+    display: grid;
+    gap: 20px;
+    box-shadow: 0 4px 2px -2px gray;
 }
 
 .trend {
-    
+    display: grid;
+    grid-template-columns: 64px 1fr;
+}
+
+.trend span {
+    grid-column: 1;
+}
+
+.trend svg {
+    align-self: center;
+    justify-self: center;
+    font-size: 48px;
+    color: hsl(42deg 87% 55%);
+}
+
+.trend-details {
+    grid-column: 2;
+}
+
+.trend-details a {
+    color: inherit;
 }
